--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "https://vacinw.github.io/React",
     "name": "tiktok-ui",
     "version": "0.1.0",
     "private": true,
@@ -24,11 +25,14 @@
     "devDependencies": {
         "babel-plugin-module-resolver": "^4.1.0",
         "customize-cra": "^1.0.0",
+        "gh-pages": "^6.0.0",
         "react-app-rewired": "^2.2.1",
         "sass": "^1.51.0"
     },
     "scripts": {
         "start": "react-app-rewired start",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "build": "react-app-rewired build",
         "test": "react-app-rewired test",
         "eject": "react-app-rewired eject"
